# fast-text-server

./: .gitignore  Cargo.toml  LICENSE  README.md  cfg.toml
src/: base64.rs  cfglib.rs  main.rs  services.rs  utils.rs
