[package]
name = "ms-base64"
version = "0.1.0"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
actix-web = "3"
encoding = "0.2"