[package]
name = "fast-webhooks"
version = "0.1.1"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
actix-web = "3"
encoding = "0.2"
# unescape = "0.1"
lazy_static = "1.4"
base64 = "0.13"
regex = "1.5"
parking_lot = "0.11"
log = "0.4"
simple_logger = "1.11"
num_cpus = "1.13"
clap = "2.33"
mailparse = "0.13.5"
quoted_printable = "0.4.3"
