[package]
name = "fast-text-server"
version = "0.2.0"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
description = "Fast Text Server is a lightweight, high capacity and reliable remote function server which provides REST API services for processing, modifying, re-encoding and matching on UTF-8 data."
repository = "https://github.com/DK26/fast-text-server"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
toml = "0.5"
actix-web = "4"
encoding = "0.2"
# unescape = "0.1"
lazy_static = "1.4"
base64 = "0.13"
regex = "1.5"
parking_lot = "0.12"
log = "0.4"
simple_logger = "2"
num_cpus = "1.13"
clap = "3"
mailparse = "0.13.5"
quoted_printable = "0.4.3"

[dev-dependencies]

# https://bheisler.github.io/criterion.rs/book/getting_started.html
criterion = { version = "0.3", features = ["html_reports"] }
